下拉菜单初版

--- a/student/jiangxue/2.1 下拉菜单/menu.html
+++ b/student/jiangxue/2.1 下拉菜单/menu.html
@@ -12,7 +12,7 @@
 		<li><a href="#">我的淘宝</a>
 			<ul>
 				<li><a href="#">已买到宝贝</a></li>
-				<li><a href="#">我的足迹123</a></li>
+				<li><a href="#">我的足迹</a></li>
 			</ul>
 		</li>
 		<li><a href="#">收藏夹</a>
